--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react18",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.tsx",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
