--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-observable": "^2.0.0",
+    "reselect": "^4.1.6",
     "rxjs": "^7.5.6",
     "typesafe-actions": "^5.1.0",
     "web-vitals": "^2.1.4"
